# scylla

./: .gitignore  .gitmodules  CMakeLists.txt  atomic_cell.cc  atomic_cell.hh  atomic_cell_or_collection.hh  build.sh  bytes.hh  bytes_ostream.hh  cache_algorithm.cc  cache_algorithm.hh  cache_flat_mutation_reader.hh  collection_mutation.cc  collection_mutation.hh  compound.hh  compress.cc  compress.hh  configure.py  counters.hh  database.cc  database.hh  dict_autotrainer.cc  dict_autotrainer.hh  gdbinit  generic_server.cc  hashers.cc  init.cc  keys.hh  lua.cc  main.cc  multishard_mutation_query.cc  mutation.cc  mutation_fragment.hh  mutation_partition.cc  mutation_partition.hh  partition_snapshot_reader.hh  partition_snapshot_row_cursor.hh  partition_version.cc  partition_version.hh  reader_concurrency_semaphore.cc  (+17 more)
alternator/: controller.cc  executor.cc  serialization.cc  server.cc  ttl.cc
api/: column_family.cc  lsa.cc  raft.cc  storage_service.cc  system.cc  tasks.cc
audit/: audit.cc  audit_cf_storage_helper.cc
auth/: certificate_authenticator.cc  common.cc  default_authorizer.cc  ldap_role_manager.cc  password_authenticator.cc  permissions_cache.cc  saslauthd_authenticator.cc  service.cc  standard_role_manager.cc
cdc/: generation.cc  log.cc  split.cc
cmake/: Findkmip.cmake
compaction/: compaction.cc  compaction_descriptor.hh  compaction_manager.cc  compaction_strategy.cc  incremental_compaction_strategy.cc  leveled_compaction_strategy.cc  leveled_manifest.hh  task_manager_module.cc  time_window_compaction_strategy.cc
conf/: scylla.yaml
cql3/: attributes.cc  constants.hh  lists.cc  lists.hh  maps.cc  maps.hh  operation.hh  query_processor.cc  sets.cc  sets.hh  tuples.cc  tuples.hh  update_parameters.hh  user_types.cc  user_types.hh  values.cc  values.hh
db/: batchlog_manager.cc  cache_mutation_reader.hh  cache_tracker.hh  config.cc  config.hh  consistency_level.cc  data_listeners.cc  heat_load_balance.cc  heat_load_balance.hh  large_data_handler.cc  legacy_schema_migrator.cc  schema_applier.cc  schema_tables.cc  size_estimates_virtual_reader.cc  snapshot-ctl.cc  sstables-format-selector.cc  sstables-format-selector.hh  system_distributed_keyspace.cc  system_keyspace.cc  (+1 more)
loader/: Cargo.toml
loader/src/: main.rs
tests/: .test1.cc.swp  CMakeLists.txt  node.capnp.c++  test1.cc  test_page_aware_writer.cc  test_partition_index_writer.cc  test_trivial_reader_writer.cc  test_utils.cc  test_utils.hh
(+1798 files in other folders)
